[workspace]
resolver = "3"
members = ["burrego", "kwctl", "policy-evaluator", "policy-fetcher", "policy-sdk-rust", "policy-server"]

[workspace.dependencies]
cached = { version = "0.55", features = ["async_tokio_rt_multi_thread"] }
async-trait = "0.1"
base64 = "0.22"
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false }
dns-lookup = "2.0"
directories = "6.0"
docker_credential = "1.3"
futures = "0.3"
lazy_static = "1.5"
oci-client = { version = "0.15", default-features = false, features = [
  "rustls-tls",
] }
path-slash = "0.2"
rayon = "1.10"
regex = "1.11"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
] }
rustls-pki-types = "1" # stick to the same version used by sigstore
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sigstore = { version = "0.12", default-features = false, features = [
  "cached-client",
  "cosign",
  "rustls-tls",
  "sigstore-trust-root",
] }
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = [
  "rt",
  "rt-multi-thread",
] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
walkdir = "2.5"
x509-parser = "0.17"
anyhow = "1.0"
rcgen = "0.13"
rstest = "0.25"
tempfile = "3.19"
testcontainers = { version = "0.24", default-features = false, features = [
  "aws-lc-rs",
  "http_wait",
] }
textwrap = "0.16"
wasi-common = "34.0"
wasmtime = "34.0"
wasmtime-wasi = "34.0"
email_address = { version = "0.2", features = ["serde"] }
itertools = "0.14"
json-patch = "4.0"
k8s-openapi = { version = "0.25.0", default-features = false, features = [
  "v1_30",
] }
kube = { version = "1.0.0", default-features = false, features = [
  "client",
  "runtime",
  "rustls-tls",
] }
kubewarden-policy-sdk = { version = "0.13.4", features = ["crd"] }
mail-parser = { version = "0.11", features = ["serde"] }
picky = { version = "7.0.0-rc.8", default-features = false, features = [
  "chrono_conversion",
  "x509",
] }
rhai = { version = "1.21", features = ["sync"] }
semver = { version = "1.0", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable"] }
validator = { version = "0.20", features = ["derive"] }
wapc = "2.1"
wasmparser = "0.235"
wasmtime-provider = { version = "2.9.0", features = ["cache"] }
assert-json-diff = "2.0"
hyper = { version = "1" }
serial_test = "3.2"
test-context = "0.4"
test-log = "0.2"
tower-test = "0.4"
# This is required to have reqwest built using the `rustls-tls-native-roots`
# feature across all the transitive dependencies of policy-fetcher
# This is required to have the integration tests use the system certificates instead of the
# ones bundled inside of rustls. This allows to pull the test policies also from
# self hosted registries (which is great at development time)
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
] }
