[package]
authors = [
  "Fabrizio Sestito <fabrizio.sestito@suse.com>",
  "Flavio Castelli <fcastelli@suse.com>",
  "Kubewarden Developers <kubewarden@suse.de>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.de>",
]
edition = "2021"
name = "policy-fetcher"
version = "0.10.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
cfg-if = { workspace = true }
directories = { workspace = true }
docker_credential = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
oci-client = { workspace = true, default-features = false, features = [
  "rustls-tls",
] }
path-slash = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "rustls-tls",
] }
rustls = { workspace = true, default-features = false, features = [
  "std",
  "tls12",
] }
rustls-pki-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sigstore = { workspace = true, default-features = false, features = [
  "cached-client",
  "cosign",
  "rustls-tls",
  "sigstore-trust-root",
] }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = false }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rcgen = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true, default-features = false, features = [
  "aws-lc-rs",
  "http_wait",
] }
textwrap = { workspace = true }
