[package]
authors = [
  "Fabrizio Sestito <fabrizio.sestito@suse.com>",
  "Flavio Castelli <fcastelli@suse.com>",
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
  "Kubewarden Developers <kubewarden@suse.de>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.de>",
]
edition = "2021"
name = "policy-server"
version = "1.26.0"

[dependencies]
policy-evaluator = { path = "../policy-evaluator" }
anyhow = { workspace = true }
axum = { version = "0.8.1", features = ["macros", "query"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["cargo", "env"] }
clap-markdown = { version = "0.1.4" }
daemonize = { version = "0.5" }
futures = { workspace = true }
itertools = { workspace = true }
jemalloc_pprof = { version = "0.7.0" }
k8s-openapi = { workspace = true }
lazy_static = { workspace = true }
mime = { version = "0.3" }
mockall_double = { version = "0.3" }
num_cpus = { version = "1.16.0" }
opentelemetry = { version = "0.30.0", default-features = false, features = [
  "metrics",
  "trace",
] }
opentelemetry-otlp = { version = "0.30.0", features = [
  "grpc-tonic",
  "metrics",
  "tls",
  "tonic",
] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
pprof = { version = "0.15", features = ["prost-codec"] }
rayon = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true, default-features = false, features = [
  "logging",
  "ring",
  "std",
  "tls12",
] }
rustls-pemfile = { version = "2.2.0" }
rustls-pki-types = { workspace = true, features = ["alloc"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tikv-jemalloc-ctl = "0.6.0"
tikv-jemallocator = { version = "0.6.0", features = [
  "profiling",
  "unprefixed_malloc_on_supported_platforms",
] }
tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.13.1" }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = { workspace = true }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11"
tokio-stream = "0.1.15"

[dev-dependencies]
backon = { version = "1.3", features = ["tokio-sleep"] }
http-body-util = "0.1.1"
mockall = "0.13"
rcgen = { version = "0.13", features = ["crypto"] }
rstest = "0.25"
tempfile = "3.16.0"
testcontainers = { version = "0.24", features = ["watchdog"] }
tower = { version = "0.5", features = ["util"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
openssl = "0.10"
reqwest = { workspace = true, default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls-manual-roots",
] }

[features]
otel_tests = []
